# TODO_htmx

./: Cargo.toml  README.md
src/: main.rs  templates.rs  todo_service.rs
templates/: add_todo.html  index.html  todo.html  todos.html
